Np 45941 when unpublishing publication add a comment (#1517)
* wip

* refactor, wip missing test coverage

* refactor: add personCristinId to UserInstance, wip missing test coverage

* refactor: add accessRights to UserInstance, wip missing test coverage

* refactor: simplify PublicationPermission with UserInstance, wip missing test coverage

* refactor: simplify PublicationPermission base class, wip missing test coverage

* refactor: add tests

* refactor: codacy

* refactor: codacy

* refactor: codacy

* refactor: change fromRequestInfo to create

* refactor: change PublicationPermission to PublicationAction

* feature: add comment to unpublish #NP-45941

* refactor: rename some tests #NP-45941

* feature: add open api definition #NP-45941

* feature: add missing open api type definition #NP-45941

* refactor: remove duplicate query param from delete endpoint in open api #NP-45941

* fix: add missing env and access rights #NP-45941

* fix: make publication notes list mutable #NP-45941

* fix: open api, mark type and comment required #NP-45941

* refactor: rename createAnyUserInstanceFromRequest to createUserInstanceFromRequest and make internal/external private #NP-45941

* refactor: changes from PR feedback #NP-45941

* refactor: rename hasPermission to allowsAction #NP-45941

* refactor: rename and change test shouldAllowResourceOwnerToUpdateDegreeInDraftStatus #NP-45941

* refactor: pr feedback #NP-45941

* refactor: authorize #NP-45941

* refactor: better name #NP-45941

* fix: unstable test #NP-45941

* refactor: peer review feedback #NP-45941