@@ -47,6 +47,7 @@ import no.unit.nva.model.AdditionalIdentifier;
 import no.unit.nva.model.Contributor;
 import no.unit.nva.model.Identity;
 import no.unit.nva.model.PublicationDate;
+import no.unit.nva.model.PublicationNote;
 import no.unit.nva.model.ResearchProject;
 import no.unit.nva.model.Username;
 import no.unit.nva.model.funding.ConfirmedFunding;
@@ -586,7 +587,7 @@ public class GeneralMappingRules {
     public void theNvaResourceHasANotesFieldEqualTo(String expectedNote) {
         var actualNotes = scenarioContext.getNvaEntry().getPublicationNotes();
         assertThat(actualNotes, hasSize(1));
-        var publicationNote = actualNotes.get(0);
+        var publicationNote = (PublicationNote)actualNotes.getFirst();
         assertThat(publicationNote.publicationNoteMessage(), equalTo(expectedNote));
     }
 
